fix(style): add row wrap to hash output

--- a/index.css
+++ b/index.css
@@ -53,13 +53,19 @@ html, body {
 }
 
 .form-output {
+    max-width: 100%;
     margin: 5px 0 0 0;
+    font-family: inherit;
+    font-size: inherit;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
 
-.form-output > pre {
-    display: inline;
-    font-size: inherit;
+.form-output__label {
+    max-width: 100%;
+    margin: 5px 0 0 0;
     font-family: inherit;
+    font-size: inherit;
 }
 
 .encryption-table {
